1st try to resolve choose category horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 body{
     background-image: linear-gradient(180deg , var(--backgroundWhite) , #f4f4f6);
     height: 100%;
+    overflow-x: hidden;
 }
 
 * {
@@ -85,6 +86,7 @@ header .user_image img {
 
 header .menu_bar {
     background-color: white;
+    z-index: 100;
 }
 
 header .menu_bar::before {
@@ -211,50 +213,19 @@ header .menu_bar .icon {
 .categories .category_name {
     font-weight: bold;
 }
-
 .categories_slider {
-    width: 100vw;
-    /* position: absolute; */
-    display: block;
-    top: 0;
-    left: 0;
-    width: 110px;
-    max-height: 750px;
-    margin: 0;
-    padding-top: 1px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    transform: rotate(-90deg) translateY(-250px);
-    transform-origin: right top;
-    padding: 250px 0 0 0;
-    padding: 90px 0 0 0;
+  overflow-x: hidden;
+  display: flex;
+  flex-wrap: nowrap;
 }
+
 
 .categories .single_category {
-    max-width: 6.5em;
-    display: block;
-    padding: 5px;
-    transform: rotate(90deg);
-    /* transform-origin: right top; */
-    /* height: 250px; */
-    margin: 30px 0;
+  width: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-
-
-
-::-webkit-scrollbar {
-    width: 1px;
-    height: 1px;
-}
-
-::-webkit-scrollbar-button {
-    width: 1px;
-    height: 1px;
-}
-
-
-
 
 
 
